SalesforceCode/objects/Graph__c.object
<CustomObject>
    <description>Custom Object to store data about a Graph that  the user can create. Will contain objects such as graph type, filters, axes(?), and the query required to get the data from the database.</description>
    <fields>
        <fullName>AppName__c</fullName>
        <description>The appname for which this graph is for</description>
        <label>AppName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <description>Graph attribute that is to be graphed</description>
        <label>Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChartType__c</fullName>
        <label>ChartType</label>
        <picklist>
            <picklistValues>
                <fullName>bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>timeline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Query2__c</fullName>
        <label>Query2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <description>Stores the query that will be used to get the data from the database.</description>
        <label>Query</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisualForce_Page__c</fullName>
        <defaultValue>&quot;salsaforcedashboard&quot;</defaultValue>
        <description>The visual force page to redirect to when this graph is selected (only the part after na9.salesforce.com/apex/....)</description>
        <label>VisualForcePage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventNameFilter__c</fullName>
        <description>Event name to filter the graph on</description>
        <label>eventNameFilter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Graph</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Graph Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Graphs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>